[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.tres" type="DynamicFont" id=1]
[ext_resource path="res://UNIVERSE.gd" type="Script" id=2]
[ext_resource path="res://box.png" type="Texture" id=3]

[node name="UNIVERSE" type="Control"]
anchor_right = 3.001
anchor_bottom = 3.023
margin_right = 0.0795898
margin_bottom = 0.159668
script = ExtResource( 2 )

[node name="CenterContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -636.0
margin_right = 636.0
margin_bottom = 320.0

[node name="Box" type="NinePatchRect" parent="CenterContainer"]
margin_right = 1272.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="Label" type="RichTextLabel" parent="CenterContainer"]
margin_right = 1272.0
margin_bottom = 320.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "asdfsdfas
sadfasdf"
text = "asdfsdfas
sadfasdf"
fit_content_height = true
scroll_active = false

[node name="Foods" type="Node2D" parent="."]

[node name="StartWait" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="UpdateInfo" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 3, 3 )

[connection signal="timeout" from="UpdateInfo" to="." method="_on_UpdateInfo_timeout"]
